--- a/pom.xml
+++ b/pom.xml
@@ -4,6 +4,28 @@
   <groupId>com.yaroslavyankov.ftp-test</groupId>
   <artifactId>ftp-client-test</artifactId>
   <version>1.0-SNAPSHOT</version>
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <configuration>
+          <source>8</source>
+          <target>8</target>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
   <name>Archetype - ftp-client-test</name>
   <url>http://maven.apache.org</url>
+  <dependencies>
+
+    <dependency>
+      <groupId>org.testng</groupId>
+      <artifactId>testng</artifactId>
+      <version>7.5.1</version>
+      <scope>test</scope>
+    </dependency>
+
+  </dependencies>
 </project>
