--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,18 @@
         </configuration>
       </plugin>
     </plugins>
+    <pluginManagement>
+      <plugins>
+        <plugin>
+          <artifactId>maven-surefire-plugin</artifactId>
+          <configuration>
+            <suiteXmlFiles>
+              <suiteXmlFile>testng.xml</suiteXmlFile>
+            </suiteXmlFiles>
+          </configuration>
+        </plugin>
+      </plugins>
+    </pluginManagement>
   </build>
   <name>Archetype - ftp-client-test</name>
   <url>http://maven.apache.org</url>
@@ -25,6 +37,12 @@
       <artifactId>testng</artifactId>
       <version>7.5.1</version>
       <scope>test</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>ru.yaroslavyankov</groupId>
+      <artifactId>ftp-client</artifactId>
+      <version>1.0</version>
     </dependency>
 
   </dependencies>
